Added messages box and new game form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
 
   <h1>Tic-Tac-Toe</h1>
 
+  <div id="messages">Test message</div>
+
+  <div id="new-game-splash">
+    <form class="new-game-container">
+      <h1>New Game</h1>
+
+      <label for="players">Players: </label>
+      <input type="radio" name="players" value="1">1
+      <input type="radio" name="players" value="2">2 <br><br>
+
+      <label for="difficulty">CPU Difficulty: </label>
+      <input type="radio" name="difficulty" value="easy">Easy
+      <input type="radio" name="difficulty" value="average">Average
+      <input type="radio" name="difficulty" value="impossible">Impossible <br><br>
+
+      <button type="button" class="button" onclick="startGame()">Start Game</button>
+
+
+
+  </div>
+
   <div id="container">
 
   </div>
